--- a/Resources/Nibs/WeatherHeaderView.xib
+++ b/Resources/Nibs/WeatherHeaderView.xib
@@ -10,53 +10,68 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherHeaderView" customModule="WeatherApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i17-tM-iIY" customClass="WeatherHeaderView" customModule="WeatherApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+        <view contentMode="scaleToFill" id="i17-tM-iIY" customClass="WeatherHeaderView" customModule="WeatherApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpx-i2-Iq4">
-                    <rect key="frame" x="159" y="20" width="57" height="32.5"/>
-                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="30"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkt-0Y-8MG">
-                    <rect key="frame" x="16" y="142.5" width="343" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DPL-JX-bMd">
-                    <rect key="frame" x="143" y="67.5" width="89" height="65"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i2X-wk-2WC">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="285"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkt-0Y-8MG">
+                            <rect key="frame" x="16" y="187.5" width="343" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DPL-JX-bMd">
+                            <rect key="frame" x="162.5" y="117.5" width="50" height="65"/>
+                            <constraints>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="YxP-zJ-xOv"/>
+                                <constraint firstAttribute="height" constant="65" id="r24-WM-idx"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="°" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8w-sq-eVy">
+                            <rect key="frame" x="212.5" y="117.5" width="32" height="65"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="65" id="Cu0-Yg-5l1"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpx-i2-Iq4">
+                            <rect key="frame" x="16" y="73" width="343" height="34.5"/>
+                            <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="30"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="65" id="r24-WM-idx"/>
+                        <constraint firstItem="g8w-sq-eVy" firstAttribute="leading" secondItem="DPL-JX-bMd" secondAttribute="trailing" id="262-3X-9sB"/>
+                        <constraint firstItem="hkt-0Y-8MG" firstAttribute="top" secondItem="DPL-JX-bMd" secondAttribute="bottom" constant="5" id="7zI-Of-ejY"/>
+                        <constraint firstItem="cpx-i2-Iq4" firstAttribute="top" secondItem="i2X-wk-2WC" secondAttribute="top" constant="73" id="9YL-7v-8qa"/>
+                        <constraint firstItem="g8w-sq-eVy" firstAttribute="top" secondItem="DPL-JX-bMd" secondAttribute="top" id="Fhv-9a-mPT"/>
+                        <constraint firstAttribute="trailing" secondItem="cpx-i2-Iq4" secondAttribute="trailing" constant="16" id="OcK-5R-meU"/>
+                        <constraint firstItem="DPL-JX-bMd" firstAttribute="top" secondItem="cpx-i2-Iq4" secondAttribute="bottom" constant="10" id="Uhi-Hi-KuC"/>
+                        <constraint firstItem="DPL-JX-bMd" firstAttribute="leading" relation="lessThanOrEqual" secondItem="i2X-wk-2WC" secondAttribute="leading" constant="162.5" id="adQ-c4-jvX"/>
+                        <constraint firstItem="hkt-0Y-8MG" firstAttribute="leading" secondItem="i2X-wk-2WC" secondAttribute="leading" constant="16" id="le7-8Q-HBl"/>
+                        <constraint firstItem="DPL-JX-bMd" firstAttribute="centerX" secondItem="i2X-wk-2WC" secondAttribute="centerX" id="lo4-sT-bzL"/>
+                        <constraint firstAttribute="trailing" secondItem="hkt-0Y-8MG" secondAttribute="trailing" constant="16" id="pB0-Bs-ycW"/>
+                        <constraint firstItem="cpx-i2-Iq4" firstAttribute="leading" secondItem="i2X-wk-2WC" secondAttribute="leading" constant="16" id="tEZ-7Y-V6p"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8w-sq-eVy">
-                    <rect key="frame" x="232" y="67.5" width="32" height="65"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="65" id="Cu0-Yg-5l1"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="80"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="dYK-rJ-dWh"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="hkt-0Y-8MG" firstAttribute="leading" secondItem="dYK-rJ-dWh" secondAttribute="leading" constant="16" id="86j-du-nqz"/>
-                <constraint firstItem="cpx-i2-Iq4" firstAttribute="centerX" secondItem="i17-tM-iIY" secondAttribute="centerX" id="Bzq-En-cOe"/>
-                <constraint firstItem="g8w-sq-eVy" firstAttribute="centerY" secondItem="i17-tM-iIY" secondAttribute="centerY" id="DPe-qr-lCw"/>
-                <constraint firstItem="DPL-JX-bMd" firstAttribute="centerY" secondItem="i17-tM-iIY" secondAttribute="centerY" id="O94-bK-OmE"/>
-                <constraint firstItem="DPL-JX-bMd" firstAttribute="top" secondItem="cpx-i2-Iq4" secondAttribute="bottom" constant="15" id="TCG-8c-kyf"/>
-                <constraint firstItem="hkt-0Y-8MG" firstAttribute="top" secondItem="DPL-JX-bMd" secondAttribute="bottom" constant="10" id="V4x-pi-Fjm"/>
-                <constraint firstItem="dYK-rJ-dWh" firstAttribute="trailing" secondItem="hkt-0Y-8MG" secondAttribute="trailing" constant="16" id="Xfl-sX-6zI"/>
-                <constraint firstItem="cpx-i2-Iq4" firstAttribute="top" secondItem="dYK-rJ-dWh" secondAttribute="top" constant="20" id="ajl-kF-rev"/>
-                <constraint firstItem="g8w-sq-eVy" firstAttribute="leading" secondItem="DPL-JX-bMd" secondAttribute="trailing" id="aos-WM-g4T"/>
-                <constraint firstItem="DPL-JX-bMd" firstAttribute="centerX" secondItem="i17-tM-iIY" secondAttribute="centerX" id="gxZ-XD-goL"/>
+                <constraint firstItem="i2X-wk-2WC" firstAttribute="bottom" secondItem="dYK-rJ-dWh" secondAttribute="bottom" constant="-15" id="194-3A-pIJ"/>
+                <constraint firstItem="i2X-wk-2WC" firstAttribute="top" secondItem="i17-tM-iIY" secondAttribute="top" id="msy-Hj-I3h"/>
+                <constraint firstItem="i2X-wk-2WC" firstAttribute="leading" secondItem="dYK-rJ-dWh" secondAttribute="leading" id="pzq-7I-rbm"/>
+                <constraint firstItem="i2X-wk-2WC" firstAttribute="trailing" secondItem="dYK-rJ-dWh" secondAttribute="trailing" id="qdx-Xl-pq5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
@@ -64,7 +79,7 @@
                 <outlet property="summaryLabel" destination="hkt-0Y-8MG" id="UZt-KS-dSb"/>
                 <outlet property="temperatureLabel" destination="DPL-JX-bMd" id="FJk-MT-OqS"/>
             </connections>
-            <point key="canvasLocation" x="1172" y="-238.38080959520241"/>
+            <point key="canvasLocation" x="1172" y="-190.70464767616193"/>
         </view>
     </objects>
     <resources>
