--- a/Sources/Features/WeatherScreen/View/HeaderView/WeatherHeaderView.xib
+++ b/Sources/Features/WeatherScreen/View/HeaderView/WeatherHeaderView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -49,7 +48,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" red="0.67843137249999996" green="0.84705882349999995" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="g8w-sq-eVy" firstAttribute="leading" secondItem="DPL-JX-bMd" secondAttribute="trailing" id="262-3X-9sB"/>
                         <constraint firstItem="hkt-0Y-8MG" firstAttribute="top" secondItem="DPL-JX-bMd" secondAttribute="bottom" constant="5" id="7zI-Of-ejY"/>
@@ -82,9 +81,4 @@
             <point key="canvasLocation" x="1172" y="-190.70464767616193"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
