Improve folders structure, optimise code structure

--- a/Sources/Features/WeatherScreen/View/Cells/DailyWeatherCell/DailyWeatherTableViewCell.xib
+++ b/Sources/Features/WeatherScreen/View/Cells/DailyWeatherCell/DailyWeatherTableViewCell.xib
@@ -17,8 +17,8 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mt1-g9-nRi">
-                        <rect key="frame" x="16" y="30.333333333333336" width="28" height="19.333333333333336"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <rect key="frame" x="16.000000000000004" y="29.666666666666671" width="32.333333333333343" height="21"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -27,7 +27,7 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="35" id="GSm-AG-aK3"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -43,7 +43,7 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="35" id="QBi-ph-m1s"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="18"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
